fixed the stretched formatting

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
     font-family: 'Poppins', sans-serif;
-    width: 100vw;
 }
 body {
     margin: 0;
@@ -253,6 +252,8 @@ body {
 footer {
     background-color: rgba(128, 162, 212, 1);
     padding-top: 5px;
+    position: absolute;
+    width: 100vw;
 }
 
 footer ul {
@@ -281,5 +282,4 @@ footer li a:hover {
 
 footer p {
     text-align: center;
-    padding-bottom: 20px;
 }
